--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -26,7 +26,7 @@ jobs:
           aws-region: ${{ secrets.REGION }}
 
       - name: Build Docker image
-        run: docker buildx build --platform linux/amd64 -t $ECR_REPOSITORY:$IMAGE_TAG .
+        run: docker buildx build --platform linux/amd64 -t $ECR_REPOSITORY:$IMAGE_TAG -f app/Dockerfile app/
 
       - name: Scan Docker image with Trivy
         uses: aquasecurity/trivy-action@master
