--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -52,8 +52,12 @@ COPY --from=builder /app/scripts ./scripts
 
 # Automatically leverage output traces to reduce image size
 # https://nextjs.org/docs/advanced-features/output-file-tracing
-COPY --from=builder --chown=nextjs:nodejs /app/.next/standalone ./
-COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
+RUN if [ -d /app/.next/standalone ]; then \
+      cp -r /app/.next/standalone ./; \
+    else \
+      echo ".next/standalone not found, skipping copy"; \
+    fi
+    COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
 # Custom routes
 RUN mv ./.next/routes-manifest.json ./.next/routes-manifest-orig.json
