--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -52,13 +52,15 @@ COPY --from=builder /app/scripts ./scripts
 
 # Automatically leverage output traces to reduce image size
 # https://nextjs.org/docs/advanced-features/output-file-tracing
+# Copy .next/standalone only if it exists
 RUN if [ -d /app/.next/standalone ]; then \
       cp -r /app/.next/standalone ./; \
     else \
       echo ".next/standalone not found, skipping copy"; \
     fi
-    COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 
+# Copy .next/static normally
+COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 # Custom routes
 RUN mv ./.next/routes-manifest.json ./.next/routes-manifest-orig.json
 
