--- a/app/package.json
+++ b/app/package.json
@@ -47,8 +47,7 @@
     "postbuild": "node scripts/postbuild.js",
     "test": "jest",
     "cypress-open": "cypress open cypress run",
-    "cypress-run": "cypress run cypress run",
-    "build-docker-ci": "npm-run-all build-tracker build-geo build-app"
+    "cypress-run": "cypress run cypress run"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
