--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -7,7 +7,7 @@ COPY package.json pnpm-lock.yaml ./
 RUN npm install -g pnpm
 RUN pnpm install --frozen-lockfile
 
-# Rebuild the source code only when needed
+# Rebuild the source code only when needed.
 FROM node:22-alpine AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
