--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -16,7 +16,7 @@ COPY . .
 ARG DATABASE_TYPE
 ARG BASE_PATH
 
-ENV DATABASE_TYPE=$DATABASE_TYPE
+ENV DATABASE_TYPE=postgresql
 ENV BASE_PATH=$BASE_PATH
 
 ENV NEXT_TELEMETRY_DISABLED=1
