--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -38,7 +38,14 @@ jobs:
           exit-code: 1
           ignore-unfixed: true
 
+      - name: Login to Amazon ECR
+        run: |
+            aws ecr get-login-password --region $AWS_REGION \
+            | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_REGION.amazonaws.com
+
       - name: Tag and push Docker image to ECR
         run: |
-          docker tag $ECR_REPOSITORY:$IMAGE_TAG ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.REGION }}.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
-          docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.REGION }}.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
+              docker tag $ECR_REPOSITORY:$IMAGE_TAG \
+              ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
+
+              docker push ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
