--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -3,10 +3,9 @@ name: Terraform Apply
 on:
   workflow_dispatch:
     inputs:
-      environment:
-        description: 'Environment to deploy'
-        required: true
-        default: 'dev'
+      env:
+        ECR_REPOSITORY: umami
+        IMAGE_TAG: latest
 
 jobs:
   terraform-apply:
@@ -31,7 +30,7 @@ jobs:
         run: terraform init
 
       - name: Terraform Plan
-        run: terraform plan -out=tfplan
+        run: terraform plan -out=tfplan -var="container_image=${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}"
 
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
