--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -30,7 +30,7 @@ jobs:
         run: terraform init
 
       - name: Terraform Plan
-        run: terraform plan -out=tfplan -var="container_image=${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}"
-
+        run: terraform plan -out=tfplan \
+            -var="container_image=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}"
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
