--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -3,14 +3,26 @@ name: Terraform Apply
 on:
   workflow_dispatch:
     inputs:
-      env:
-        ECR_REPOSITORY: umami
-        IMAGE_TAG: latest
-        AWS_REGION: eu-west-2
+      ecr_repository:
+        description: 'ECR repository name'
+        required: true
+        default: 'umami'
+      image_tag:
+        description: 'Image tag'
+        required: true
+        default: 'latest'
+      aws_region:
+        description: 'AWS region'
+        required: true
+        default: 'eu-west-2'
 
 jobs:
   terraform-apply:
     runs-on: ubuntu-latest
+    env:
+      ECR_REPOSITORY: ${{ github.event.inputs.ecr_repository }}
+      IMAGE_TAG: ${{ github.event.inputs.image_tag }}
+      AWS_REGION: ${{ github.event.inputs.aws_region }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -20,7 +32,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.REGION }}
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
@@ -33,8 +45,9 @@ jobs:
       - name: Terraform Plan
         run: terraform plan -out=tfplan
         env:
-          TF_VAR_container_image: "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-west-2.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}"
+          TF_VAR_container_image: "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}"
+
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
         env:
-          TF_VAR_container_image: "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-west-2.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}"
+          TF_VAR_container_image: "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}"
