--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -23,6 +23,7 @@ jobs:
       ECR_REPOSITORY: ${{ github.event.inputs.ecr_repository }}
       IMAGE_TAG: ${{ github.event.inputs.image_tag }}
       AWS_REGION: ${{ github.event.inputs.aws_region }}
+      TF_VAR_container_image: "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ github.event.inputs.aws_region }}.amazonaws.com/${{ github.event.inputs.ecr_repository }}:${{ github.event.inputs.image_tag }}"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -42,12 +43,11 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
+      - name: Debug container image
+        run: echo "Container image = $TF_VAR_container_image"
+
       - name: Terraform Plan
         run: terraform plan -out=tfplan
-        env:
-          TF_VAR_container_image: "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}"
 
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
-        env:
-          TF_VAR_container_image: "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}"
