--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -21,6 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       TF_VAR_container_image: "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-west-2.amazonaws.com/umami:latest"
+      TF_VAR_container_name: "${{ secrets.ECR_REPOSITORY }}"
       AWS_REGION: "eu-west-2"
     steps:
       - name: Checkout repository
