--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -22,6 +22,8 @@ jobs:
     env:
       TF_VAR_container_image: "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-west-2.amazonaws.com/umami:latest"
       TF_VAR_container_name: "${{ secrets.ECR_REPOSITORY }}"
+      TF_VAR_container_port: "3000"
+      
       AWS_REGION: "eu-west-2"
     steps:
       - name: Checkout repository
