--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -43,7 +43,7 @@ jobs:
             aws ecr get-login-password --region $AWS_REGION \
             | docker login --username AWS --password-stdin ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_REGION.amazonaws.com
 
-      - name: Tag and push Docker image to ECR
+      - name: Tag and push Docker image to ECR.
         run: |
               docker tag $ECR_REPOSITORY:$IMAGE_TAG \
               ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
